comparison css: Minor tweak to avoid spacing around All/None controls

--- a/speedcenter/media/css/main.css
+++ b/speedcenter/media/css/main.css
@@ -307,10 +307,6 @@ div.about_content {
     margin-bottom: 0.5em;
 }
 
-.boxbody ul li {
-    padding-left: 0.3em;
-}
-
 .boxbody input {
     margin-left: 0;
     vertical-align: top;
@@ -330,10 +326,6 @@ div.about_content {
 a.checkall, a.uncheckall {
     font-size: medium;
     color: #AAAAAA;
-}
-
-a.checkall {
-    margin-left: 0.4em;
 }
 
 p.errormessage {
